HERO BG ISSUE
The bg of the hero is not showing in the live preview

--- a/src/input.css
+++ b/src/input.css
@@ -35,7 +35,7 @@ body,html {
 }
 
 .nav-hero-container {
-    background-image: url('/dist/images/heroBackground.jpg');
+    background-image: url('/dist/images/heroBackground.jpg') !important;
     background-size: cover;
     background-position: center;
     height: 100vh;
